# mine.js

./: .babelrc  .editorconfig  .env  .env.sample  .eslintignore  .eslintrc  .eslintrc.js  .gitignore  .graphqlconfig  .prettierrc  .stylelintrc  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  build.rs  config-overrides.js  flow.drawio  gulpfile.js  index.html  nodemon.json  package-lock.json  package.json  prettier.config.js  rollup.config.js  tsconfig.json  webpack.config.js
assets/metadata/: biomes.json  blocks.json  entities.json  fixes.json  worlds.json
bundler/: webpack.common.js  webpack.dev.js  webpack.prod.js
client/: .gitignore  App.svelte  electron.ts  global.css  main.ts  package-lock.json  package.json  types.d.ts
client/components/: button.svelte  input.svelte
client/core/: camera.ts  chat.ts  chunk.ts  container.ts  debug.ts  engine.ts  entities.ts  index.ts  inputs.ts  inventory.ts  network.ts  particles.ts  peers.ts  physics.ts  player.ts  registry.ts  rendering.ts  shadows.ts  sounds.ts  world.ts
client/libs/: aabb.ts  brain.ts  canvas-box.ts  chat-history.ts  clock.ts  clouds.ts  entity.ts  head.ts  index.ts  message.ts  overwrites.ts  (+10 more)
core/: game.js
docker/: docker-compose.yml
metadata/: blocks.json  worlds.json
protocol/: index.d.ts  index.js  messages.proto
public/: index.html
scripts/: run.sh
server/: .babelrc  .graphqlconfig  main.rs  main.ts  messages.proto  package-lock.json  package.json
server-rs/: main.rs  models.rs  registry.rs  server.rs
server/core/: Cargo.toml  biomes.rs  build.rs  builder.rs  builder.ts  chunk.rs  chunk.ts  chunks.rs  chunks.ts  constants.rs  constants.ts  generator.rs  generator.ts  index.ts  lights.rs  mesher.rs  mesher.ts  message.rs  mine.ts  mod.rs  models.rs  network.ts  registry.ts  routes.rs  server.rs  session.rs  space.rs  world.rs  world.ts
server/core/comp/: phys.rs
server/core/engine/: chunk.rs  chunks.rs  clock.rs  mod.rs  player.rs  players.rs  registry.rs  space.rs  world.rs
server/core/network/: message.rs  mod.rs  models.rs  routes.rs  server.rs  session.rs
server/core/src/: constants.rs  lib.rs
server/core/src/comp/: brain.rs  curr_chunk.rs  etype.rs  id.rs  lookat.rs  mod.rs  name.rs  phys.rs  rigidbody.rs  rotation.rs  target.rs  view_radius.rs  walk_towards.rs
server/core/src/engine/: astar.rs  chunk.rs  chunks.rs  clock.rs  config.rs  entities.rs  kdtree.rs  mod.rs  physics.rs  players.rs  registry.rs  space.rs  world.rs
server/core/src/network/: message.rs  models.rs  routes.rs  server.rs  session.rs
server/core/src/sys/: broadcast.rs  chunking.rs  entities.rs  generation.rs  jumping.rs  meshing.rs  mod.rs  observe.rs  pathfind.rs  peers.rs  physics.rs  search.rs  walk_towards.rs
server/core/sys/: entities.rs  mod.rs  physics.rs
server/core/workers/: generators.ts
server/tasks/: Cargo.toml
server/tasks/src/: lib.rs
shared/: config.ts  helper.ts  index.ts  saves.ts  types.ts
src/: App.svelte  index.css  index.js  index.ts
(+636 files in other folders)
