[package]
name = "protobuf-test"
version = "0.1.0"
authors = ["ian13456 <21ianh1@students.tas.tw>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "server-rs/main.rs"

[dependencies]
bytes = "1.0.1"
prost = "0.7.0"

actix = "0.10.0"
actix-codec = "0.4.0"
actix-web = "3.0.0"
actix-web-actors = "3.0.0"
actix-files = "0.5.0"
awc = "2.0.3"
env_logger = "0.8.3"
futures = "0.3.15"
image = "0.23.14"
rand = "0.8.3"
serde_json = "1.0"
serde = "1.0.126"
palette = "0.5.0"
num = "0.4.0"

[build-dependencies]
prost-build = "0.7.0"
