[package]
name = "server_core"
version = "0.1.0"
edition = "2018"

[dependencies]
server_common = { path = "../common" }
server_utils = { path = "../utils" }

actix = "0.10.0"
actix-broker = "0.3.1"
actix-files = "0.5.0"
actix-web = "3.0.0"
actix-web-actors = "3.0.0"
ansi_term = "0.12.1"
base64 = "0.13.0"
byteorder = "1.4.3"
crossbeam-channel = "0.5.1"
image = "0.23.14"
itertools = "0.10.1"
kdtree = "0.6.0"
libflate = "1.1.0"
log = "0.4"
num_cpus = "1.13.0"
prost = "0.8.0"
rand = "0.8.3"
rayon = "1.5.1"
serde = "1.0.126"
serde_json = "1.0"
specs = "0.17.0"

[build-dependencies]
prost-build = "0.7.0"
