[package]
name = "server_tasks"
version = "0.1.0"
edition = "2018"

[dependencies]
server_common = { path = "../common" }
server_core = { path = "../core" }
server_utils = { path = "../utils" }

indicatif = "0.16.2"
serde = "1.0.126"
serde_json = "1.0"

[[bin]]
name = "clean_chunks"

[[bin]]
name = "map_ids"

[[bin]]
name = "script"
